--- a/gateways/pom.xml
+++ b/gateways/pom.xml
@@ -266,6 +266,28 @@
 	    <version>1.10</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>com.pi4j</groupId>
+	    <artifactId>pi4j-core</artifactId>
+	    <version>1.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.pi4j</groupId>
+	    <artifactId>pi4j-device</artifactId>
+	    <version>1.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.pi4j</groupId>
+	    <artifactId>pi4j-gpio-extension</artifactId>
+	    <version>1.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.pi4j</groupId>
+	    <artifactId>pi4j-service</artifactId>
+	    <version>1.0</version>
+	</dependency>
+	
+	
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
